Fixed overflowed code snippet

--- a/site/static/css/app.css
+++ b/site/static/css/app.css
@@ -122,6 +122,7 @@ pre {
   line-height: 1.2rem;
   padding: 1.5rem;
   margin-bottom: 30px;
+  overflow-x:auto;
 }
 
 @media (max-width: 767px) {
